<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Salad Bowl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="team2player">Team 2 Player</string>
    <string name="team1player">Team 1 Player</string>
    <string name="teamone">Team One</string>
    <string name="teamtwo">Team Two</string>
    <string name="submit">Let\'s Play!</string>

    <string-array name="word_count_array">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="letters_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string name="title_activity_input_words">InputWordsActivity</string>
    <string name="title">SALAD BOWL</string>
    <string name="starting_letter">Letter:</string>
    <string name="words_per_player">Word Count:</string>

</resources>
