<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SALAD BOWL"
        android:gravity="center_horizontal"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/letter_spinner"
        android:entries="@array/letters_array">

        </Spinner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team1player"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/team_one_edittext"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_one_add"
                android:text="@string/add"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_one_reset"
                android:text="@string/reset"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teamone"
                android:gravity="center_horizontal"/>
            <ListView
                android:id="@+id/listview_team_one"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

            </ListView>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"></View>

            </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team2player"
                android:inputType="textPersonName"
                android:ems="10"

                android:id="@+id/team_two_edittext"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_two_add"
                android:text="@string/add"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/team_two_reset"
                android:text="@string/reset"/>
            <TextView
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/teamtwo"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:id="@+id/listview_team_two">

            </ListView>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"></View>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit_button"/>

    </LinearLayout>

</LinearLayout>
